--- a/main.css
+++ b/main.css
@@ -1,7 +1,53 @@
-.btn {
-    background-color: #EEE;
-    border: 0;
+body {
+    margin: 0;
+}
+
+.screenBlue {
+    height: 90vh;
+    color: #fff;
+    font-size: 5em;
+    text-align: center;
+    background-color: #88f;
+    padding: 5vh 5vw 5vh 5vw;
+}
+
+.screenRed {
+    height: 90vh;
+    color: #fff;
+    font-size: 5em;
+    text-align: center;
+    background-color: #f88;
+    padding: 5vh 5vw 5vh 5vw;
+}
+
+.toleft {
+    text-align: left;
+}
+
+.arrow-bottom {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    margin: 0 10px;
+    border-bottom: 10px solid #000;
+    border-right: 10px solid #000;
+    transform: rotate(45deg);
+}
+
+.goto {
+    display: none;
+    
+    padding: 40px 10px;
+    background-color: #fff;
+    color: #000;
+    text-decoration: none;
+    border-radius: 50%;
+    
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+.goto:hover {
+    background-color: #ddd;
     cursor: pointer;
-    width: 100px;
-    padding: 10px 0;
 }
