--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 body {
+    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
     margin: 0;
 }
 
